--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,482</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">92,993</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.DriverScript</td><td><a href="#m0">Jira</a></td><td rowspan="1">1582703021940</td><td rowspan="1">6409</td></tr><tr class="passedeven"><td><a href="#m1">JiraId_1200</a></td><td rowspan="1">1582703028393</td><td rowspan="1">4948</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">test.DriverScript</td><td><a href="#m0">Jira</a></td><td rowspan="1">1582804183076</td><td rowspan="1">15395</td></tr><tr class="passedeven"><td><a href="#m1">JiraId_1200</a></td><td rowspan="1">1582804198577</td><td rowspan="1">7116</td></tr><tr class="passedeven"><td><a href="#m2">JiraId_1201</a></td><td rowspan="1">1582804205704</td><td rowspan="1">40437</td></tr><tr class="passedeven"><td><a href="#m3">JiraId_1202</a></td><td rowspan="1">1582804246151</td><td rowspan="1">2513</td></tr><tr class="passedeven"><td><a href="#m4">JiraId_1207</a></td><td rowspan="1">1582804255335</td><td rowspan="1">2395</td></tr><tr class="passedeven"><td><a href="#m5">Jira_1203</a></td><td rowspan="1">1582804248682</td><td rowspan="1">3770</td></tr><tr class="passedeven"><td><a href="#m6">Jira_1204</a></td><td rowspan="1">1582804257738</td><td rowspan="1">1871</td></tr><tr class="passedeven"><td><a href="#m7">Jira_1205</a></td><td rowspan="1">1582804252461</td><td rowspan="1">2861</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">test.DriverScript#Jira</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">test.DriverScript#JiraId_1200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.DriverScript#JiraId_1201</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.DriverScript#JiraId_1202</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.DriverScript#JiraId_1207</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.DriverScript#Jira_1203</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">test.DriverScript#Jira_1204</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">test.DriverScript#Jira_1205</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
