--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-758052028\testng-customsuite.xml</span>
+                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-786665340\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>2 groups</span>
+                    <span>7 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,6 +108,36 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1200">JiraId_1200</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1201">JiraId_1201</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1202">JiraId_1202</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1207">JiraId_1207</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1203">Jira_1203</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1204">Jira_1204</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1205">Jira_1205</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,12 +172,54 @@
                   <span class="method-name">JiraId_1200</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="JiraId_1201">
+                  </a> <!-- JiraId_1201 -->
+                  <span class="method-name">JiraId_1201</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="JiraId_1202">
+                  </a> <!-- JiraId_1202 -->
+                  <span class="method-name">JiraId_1202</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="JiraId_1207">
+                  </a> <!-- JiraId_1207 -->
+                  <span class="method-name">JiraId_1207</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Jira_1203">
+                  </a> <!-- Jira_1203 -->
+                  <span class="method-name">Jira_1203</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Jira_1204">
+                  </a> <!-- Jira_1204 -->
+                  <span class="method-name">Jira_1204</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Jira_1205">
+                  </a> <!-- Jira_1205 -->
+                  <span class="method-name">Jira_1205</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-758052028\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-786665340\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -181,10 +253,46 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
+              <span class="test-group-name">Validation of Date picker</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Jira_1205</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Validation of Right Click ops</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Jira_1204</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Validation of checkbox</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Jira_1203</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Validation of color</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">JiraId_1202</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
               <span class="test-group-name">Validation of hyperlink</span>
               <br/>
               <div class="method-in-group">
                 <span class="method-in-group-name">JiraId_1200</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">JiraId_1201</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -193,6 +301,14 @@
               <br/>
               <div class="method-in-group">
                 <span class="method-in-group-name">Jira</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Web based pop-ups</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">JiraId_1207</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -212,20 +328,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Jira')
+data.setCell(0, 1, 'JiraId_1201')
 data.setCell(0, 2, 'test.DriverScript')
-data.setCell(0, 3, 6409);
+data.setCell(0, 3, 40437);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'JiraId_1200')
+data.setCell(1, 1, 'Jira')
 data.setCell(1, 2, 'test.DriverScript')
-data.setCell(1, 3, 4948);
+data.setCell(1, 3, 15395);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'JiraId_1200')
+data.setCell(2, 2, 'test.DriverScript')
+data.setCell(2, 3, 7116);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Jira_1203')
+data.setCell(3, 2, 'test.DriverScript')
+data.setCell(3, 3, 3770);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'Jira_1205')
+data.setCell(4, 2, 'test.DriverScript')
+data.setCell(4, 3, 2861);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'JiraId_1202')
+data.setCell(5, 2, 'test.DriverScript')
+data.setCell(5, 3, 2513);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'JiraId_1207')
+data.setCell(6, 2, 'test.DriverScript')
+data.setCell(6, 3, 2395);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'Jira_1204')
+data.setCell(7, 2, 'test.DriverScript')
+data.setCell(7, 3, 1871);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,15 +398,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">Jira</span>
-                <span class="method-start">13492 ms</span>
+                <span class="method-start">15591 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">JiraId_1200</span>
-                <span class="method-start">19945 ms</span>
+                <span class="method-start">31092 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">JiraId_1201</span>
+                <span class="method-start">38219 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">JiraId_1202</span>
+                <span class="method-start">78666 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Jira_1203</span>
+                <span class="method-start">81197 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Jira_1205</span>
+                <span class="method-start">84976 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">JiraId_1207</span>
+                <span class="method-start">87850 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Jira_1204</span>
+                <span class="method-start">90253 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeTheSession</span>
-                <span class="method-start">24909 ms</span>
+                <span class="method-start">92128 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
