--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,13 +11,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>JiraId_1200</td>
-<td>Validation of hyperlink </td>
+<td>Jira_1203</td>
+<td>Validation of checkbox </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Jira_1203</td>
-<td>Validation of checkbox </td>
+<td>JiraId_1200</td>
+<td>Validation of hyperlink </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -48,6 +48,11 @@
 <td>&nbsp;</td>
 <td>JiraId_1207</td>
 <td>Web based pop-ups </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>JiraId_1206</td>
+<td>Form Submission </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
