--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,5 +1,6 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Validation of Date picker</td><td>DriverScript.Jira_1205()[pri:6, instance:test.DriverScript@3224f60b]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Form Submission</td><td>DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@3224f60b]<br/></td></tr>
+<tr><td>Validation of Date picker</td><td>DriverScript.Jira_1205()[pri:6, instance:test.DriverScript@3224f60b]<br/></td></tr>
 <tr><td>Validation of Right Click ops</td><td>DriverScript.Jira_1204()[pri:8, instance:test.DriverScript@3224f60b]<br/></td></tr>
 <tr><td>Validation of checkbox</td><td>DriverScript.Jira_1203()[pri:5, instance:test.DriverScript@3224f60b]<br/></td></tr>
 <tr><td>Validation of color</td><td>DriverScript.JiraId_1202()[pri:4, instance:test.DriverScript@3224f60b]<br/></td></tr>
